@@ -1945,7 +1945,7 @@ class CHost extends CZBXAPI {
 			));
 
 			$this->massRemove(array(
-				'hosts' => $hosts,
+				'hostids' => $hostids,
 				'interfaces' => $hostInterfaces
 			));
 			$this->massAdd(array(
