@@ -11,6 +11,9 @@ A.F....... [ZBX-5074] redesign configuration of action (Eduard)
 ..F....... [ZBXNEXT-829] Zabbix server availability check (Vedmak)
 
 Bug fixes:
+A......... [ZBX-5208] fixed updating interfaces via host.massupdate (Pavels)
+A......... [ZBX-5208] fixed main interface validation in hostinterface.massremove (Pavels)
+A......... [ZBX-5208] fixed host.update only accepting arrays of interfaces and not working with a single interface (Pavels)
 ..F....... [ZBX-5237] fixed event CSV export (Pavels)
 ..F....... [ZBX-5179] fixed filter layout on low resolution screens (Pavels)
 ..F....... [ZBX-3853] changed several message strings (Pavels)
@@ -91,6 +94,9 @@ Changes for 2.0.2rc1
 New features:
 
 Bug fixes:
+A......... [ZBX-5208] fixed updating interfaces via host.massupdate (Pavels)
+A......... [ZBX-5208] fixed main interface validation in hostinterface.massremove (Pavels)
+A......... [ZBX-5208] fixed host.update only accepting arrays of interfaces and not working with a single interface (Pavels)
 ..F....... [ZBX-5237] fixed event CSV export (Pavels)
 ..F....... [ZBX-5179] fixed filter layout on low resolution screens (Pavels)
 ..F....... [ZBX-3853] changed several message strings (Pavels)
